go-user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: go-user
  name: go-user
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: go-user
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: go-user
    spec:
      containers:
      - args: ["./main"]
        image: xjyplayer/go-user:1.0.1
        imagePullPolicy: IfNotPresent
        name: go-user
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
        - mountPath: /apps/go_user
          subPath: go_user
          name: go-user-pvc
        - mountPath: /apps/log
          subPath: log
          name: go-user-pvc
        workingDir: /apps/go_user
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: go-user-pvc
        persistentVolumeClaim:
          claimName: app-pvc-claim
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: go-user
  name: go-user
spec:
  ports:
  - name: go-user-server
    port: 80
    targetPort: 80
  selector:
    io.kompose.service: go-user
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: go-user-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: go.user.52db.club
    http:
      paths:
      - backend:
          serviceName: go-user
          servicePort: 80
        path: /
  tls:
   - secretName: go-user-imroc-io-tls
     hosts:
       - go.user.52db.club
